feat(T-002): covrage fix