@@ -15,6 +15,10 @@ java {
 	}
 }
 
+jacoco {
+	toolVersion = "0.8.11"
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -25,8 +29,58 @@ repositories {
 	mavenCentral()
 }
 
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add('--enable-preview')
+tasks {
+	withType(JavaCompile).configureEach {
+		options.compilerArgs.add("--enable-preview")
+	}
+	withType(JavaExec).configureEach {
+		jvmArgs = listOf("--enable-preview")
+	}
+
+	test {
+		useJUnitPlatform()
+
+		jvmArgs = [
+				"--enable-preview",
+				"-XX:+EnableDynamicAgentLoading"
+		]
+
+		testlogger {
+			showStandardStreams = true
+			showPassedStandardStreams = false
+			showSkippedStandardStreams = false
+			showFailedStandardStreams = true
+		}
+
+		finalizedBy jacocoTestReport
+	}
+
+
+	sonar {
+		properties {
+			property "sonar.projectKey", "HassanAliCS1_tester"
+			property "sonar.organization", "hassanalics1"
+			property "sonar.host.url", "https://sonarcloud.io"
+			property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/test/jacocoTestReport.xml"
+			property "sonar.sources", "src/main"
+			property "sonar.tests", "src/test"
+
+			if (System.getenv("GITHUB_PR_NUMBER") != null) {
+				property "sonar.pullrequest.key", System.getenv("GITHUB_PR_NUMBER")
+				property "sonar.pullrequest.branch", System.getenv("GITHUB_HEAD_REF")
+				property "sonar.pullrequest.base", System.getenv("GITHUB_BASE_REF")
+			}
+		}
+	}
+
+	jacocoTestReport {
+		dependsOn test
+		reports {
+			xml.required = true
+			csv.required = false
+			html.required = false
+		}
+	}
 }
 
 dependencies {
@@ -58,31 +112,4 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-sonar {
-	properties {
-		property "sonar.projectKey", "HassanAliCS1_tester"
-		property "sonar.organization", "hassanalics1"
-		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/test/jacocoTestReport.xml"
-	}
-}
 
-jacoco {
-	toolVersion = "0.8.11"
-}
-
-jacocoTestReport {
-	dependsOn test
-
-	reports {
-		xml.required = true
-		csv.required = false
-		html.required = false
-	}
-}
-
-test {
-	useJUnitPlatform()
-	jvmArgs(['--enable-preview'])
-	finalizedBy jacocoTestReport
-}
